2009-07-23  Marcus Meissner  <meissner@suse.de>

	* configure.ac: resmgr is no longer existing.

2008-03-15  Marcus Meissner  <meissner@suse.de>

	* libgphoto2_port/gphoto2-port-info.h: The internal GPPortInfo
	  structure definition. Only shared within libgphoto2_port/

	* libgphoto2_port/gphoto2-port-info-list.c: Added new abstract
	  GPPortInfo implementation, with accessor functions.

	* removed DiskSettings, let it get handled in directory using
	  the GPPortInfo (as it should have been done before).

	* libgphoto2_port/libgphoto2_port.ver: mark some symbols INTERNAL
	  through symbolversions.

	* Do not start symbol versions with 2.0.0, but with this release.
	

2008-02-13  Marcus Meissner  <meissner@suse.de>

	* disk/disk.c: Do not check "gphotofs" filesystems, to avoid
	  recursion in gphotofs.

2007-12-28  Marcus Meissner  <marcus@jet.franken.de>

	* Migrated libgphoto2_port to use symbol versions.

	  This allows reverting the major version change.

2007-10-28  Dan Fandrich <dan@coneharvesters.com>
	* libgphoto2_port/libgphoto2_port/gphoto2-port-info-list.c: Be
	  more resiliant in case of errors enumerating a port library.

2007-10-28  Marcus Meissner  <marcus@jet.franken.de>

	* gphoto2/gphoto2-port-info-list.c: GPPortInfo.path
	  increased to 4096, since disk: for instance can take
	  paths.

	  This breaks libgphoto2_port binary compatibility,
	  so bumping interface.

2007-06-09  Marcus Meissner  <marcus@jet.franken.de>

	* usb/libusb.c: Reset the USB port before close.

	  This will help the notorious "Canon hang on init" problem.

2007-05-09  Marcus Meissner  <marcus@jet.franken.de>

	* gphoto2/gphoto2-port.h, gphoto2/gphoto2-port-library.h,
	  libgphoto2_port/gphoto2-port.c, libgphoto2_port/libgphoto2_port.sym,
	  usb/libusb.c:

	  Added USB class based control read and write (for PTP driver).

2007-02-12  Marcus Meissner  <marcus@jet.franken.de>

	* ptpip/ptpip.c: mDNS auto discovery disabled,